--- a/edge-processor/src/main/resources/application.properties
+++ b/edge-processor/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 # Uncomment to trust self signed certificates if they are presented by the Kubernetes API server
 quarkus.kubernetes-client.trust-certs=true
 
-quarkus.http.port=8081
+# NOTE:  if you change from default 8080 and use healthchecks, ensure port checks for healthchecks check correct port 
+# when deploying on OCP
+# quarkus.http.port=8081
 
 # ImagePullPolicy to use
 # quarkus.openshift.image-pull-policy=IfNotPresent
