updated properties and deployment

--- a/edge-processor/src/main/resources/application.properties
+++ b/edge-processor/src/main/resources/application.properties
@@ -3,7 +3,7 @@ quarkus.kubernetes-client.trust-certs=true
 
 # NOTE:  if you change from default 8080 and use healthchecks, ensure port checks for healthchecks check correct port 
 # when deploying on OCP
-# quarkus.http.port=8081
+%dev.quarkus.http.port=8081
 
 # ImagePullPolicy to use
 # quarkus.openshift.image-pull-policy=IfNotPresent
